[project]
name = "auth-poc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jonjia", email = "jiawenhuiwar3@163.com" }
]
dependencies = [
    "authzed>=0.13.0",
    "Flask>=3.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/auth_poc"]
